project(containers)

add_executable(TestConnectionContainer testconnectioncontainer.cpp)
add_test(NAME TestConnectionContainer COMMAND TestConnectionContainer)
target_link_libraries(TestConnectionContainer PRIVATE ${MY_TEST_LIBS})

add_executable(TestConnectionInfoContainerBuilder testconnectioninfocontainerbuilder.cpp)
add_test(NAME TestConnectionInfoContainerBuilder COMMAND TestConnectionInfoContainerBuilder)
target_link_libraries(TestConnectionInfoContainerBuilder PRIVATE ${MY_TEST_LIBS})

add_executable(TestContactContainerFileBuilder testcontactcontainerfilebuilder.cpp)
add_test(NAME TestContactContainerFileBuilder COMMAND TestContactContainerFileBuilder)
target_link_libraries(TestContactContainerFileBuilder PRIVATE ${MY_TEST_LIBS} )

# add_executable(TestFileDialogBuilder testfiledialogbuilder.cpp)
# add_test(TestFileDialogBuilder COMMAND TestFileDialogBuilder)
# target_link_libraries(TestFileDialogBuilder PRIVATE ${MY_TEST_LIBS}  )


add_executable(TestMessageContainerChangeActivedialog testmessagecontainerchangeactivedialog.cpp)
add_test(NAME TestMessageContainerChangeActivedialog COMMAND TestMessageContainerChangeActivedialog)
target_link_libraries(TestMessageContainerChangeActivedialog PRIVATE ${MY_TEST_LIBS}  )


add_executable(TestMessageContainerRecieve testmessagecontainerrecieve.cpp)
add_test(NAME TestMessageContainerRecieve COMMAND TestMessageContainerRecieve)
target_link_libraries(TestMessageContainerRecieve PRIVATE ${MY_TEST_LIBS} )


add_executable(TestTrasparentContainerElementWrapper testtrasparentcontainerelementwrapper.cpp)
add_test(NAME TestTrasparentContainerElementWrapper COMMAND TestTrasparentContainerElementWrapper)
target_link_libraries(TestTrasparentContainerElementWrapper PRIVATE ${MY_TEST_LIBS} )


